--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -33,3 +33,4 @@ pipenv = "*"
 django-import-export = "*"
 drf-spectacular = "~=0.26.4"
 dj-rest-auth = "==5.0.1"
+cb-django-s3-file-uploader = {editable = true, path = "./modules/django_s3_file_uploader"}
