--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@babel/polyfill": "^7.12.1",
     "@modules/audio-player": "file:./modules/audio-player/",
     "@modules/chat": "file:./modules/chat/",
+    "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "mixpanel-react-native": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
