--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@modules/audio-player": "file:./modules/audio-player/",
     "@modules/chat": "file:./modules/chat/",
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
+    "@modules/payments": "file:./modules/payments",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-react-native": "^0.2.2",
     "axios": "^1.4.0",
+    "babel-plugin-import-glob": "^2.0.0",
     "mixpanel-react-native": "^2.3.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
