add component Social Login

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/payments": "file:./modules/payments",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
+    "@modules/social-login": "file:./modules/social-login/",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
