add component Subscription

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@modules/payments": "file:./modules/payments",
     "@modules/privacy-policy": "file:./modules/privacy-policy",
     "@modules/social-login": "file:./modules/social-login/",
+    "@modules/subscription": "file:./modules/subscription",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
